--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,20 +1,46 @@
-server {
-  listen 80;
-  server_name www.EXAMPLE.com;
-  rewrite ^(.*) http://EXAMPLE.com$1 permanent;
+user       deploy deploy;
+worker_processes  5;
+error_log  logs/error.log;
+pid        logs/nginx.pid;
+worker_rlimit_nofile 8192;
+
+events {
+  worker_connections  4096;
 }
 
-server {
-  listen       80;
-  server_name  .com
-  charset utf-8;
+http {
+  # passenger_root /var/lib/gems/1.8/gems/passenger-2.2.14;
+  # passenger_ruby /usr/bin/ruby1.8;
+  
+  include       mime.types;
+  default_type  application/octet-stream;
+  log_format   main '$remote_addr - $remote_user [$time_local]  $status '
+    '"$request" $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
+  access_log   logs/access.log  main;
 
-  access_log  /var/www/EXAMPLE/shared/log/nginx_access.log;
-  error_log  /var/www/EXAMPLE/shared/log/nginx_error.log;
+  keepalive_timeout  65;
 
-  root   /var/www/EXAMPLE/current/public;
-  passenger_enabled on;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay off;
 
-  error_page  404              /404.html;
-  error_page   500 502 503 504  /500.html;
+  gzip  on;
+  gzip_http_version 1.0;
+  gzip_comp_level 2;
+  gzip_min_length 1100;
+  gzip_buffers     4 8k;
+  gzip_proxied any;
+  gzip_types text/html text/plain text/xml application/xml application/xml+rss text/css text/javascript application/javascript application/json;
+
+  # http://wiki.nginx.org/NginxHttpGzipStaticModule
+  # ./configure --with-http_gzip_static_module
+  # gzip_static on;
+ 
+  gzip_proxied        expired no-cache no-store private auth;
+  gzip_disable        "MSIE [1-6]\.";
+  gzip_vary           on;
+  
+  include /var/www/*/current/config/server.conf;
 }
+
